@@ -997,12 +997,12 @@ OCIReset:
             - OCIError *errhp
 
 #
-# Oracle 9.0
+# Oracle 9.1
 #
 
 # round trip: 0 (not docmented. I guess.)
 OCIDateTimeConstruct:
-  :version: 900
+  :version: 910
   :args:    - dvoid  *hndl
             - OCIError *err
             - OCIDateTime *datetime
@@ -1018,7 +1018,7 @@ OCIDateTimeConstruct:
 
 # round trip: 0 (not docmented. I guess.)
 OCIDateTimeGetDate:
-  :version: 900
+  :version: 910
   :args:    - dvoid *hndl
             - OCIError *err
             - const OCIDateTime *date
@@ -1028,7 +1028,7 @@ OCIDateTimeGetDate:
 
 # round trip: 0 (not docmented. I guess.)
 OCIDateTimeGetTime:
-  :version: 900
+  :version: 910
   :args:    - dvoid *hndl
             - OCIError *err
             - OCIDateTime *datetime
@@ -1039,7 +1039,7 @@ OCIDateTimeGetTime:
 
 # round trip: 0 (not docmented. I guess.)
 OCIDateTimeGetTimeZoneOffset:
-  :version: 900
+  :version: 910
   :args:    - dvoid *hndl
             - OCIError *err
             - const OCIDateTime *datetime
@@ -1048,7 +1048,7 @@ OCIDateTimeGetTimeZoneOffset:
 
 # round trip: 0 (not docmented. I guess.)
 OCIIntervalGetDaySecond:
-  :version: 900
+  :version: 910
   :args:    - dvoid *hndl
             - OCIError *err
             - sb4 *dy
@@ -1060,7 +1060,7 @@ OCIIntervalGetDaySecond:
 
 # round trip: 0 (not docmented. I guess.)
 OCIIntervalGetYearMonth:
-  :version: 900
+  :version: 910
   :args:    - dvoid *hndl
             - OCIError *err
             - sb4 *yr
@@ -1069,7 +1069,7 @@ OCIIntervalGetYearMonth:
 
 # round trip: 0 (not docmented. I guess.)
 OCIIntervalSetDaySecond:
-  :version: 900
+  :version: 910
   :args:    - dvoid *hndl
             - OCIError *err
             - sb4 dy
@@ -1081,7 +1081,7 @@ OCIIntervalSetDaySecond:
 
 # round trip: 0 (not docmented. I guess.)
 OCIIntervalSetYearMonth:
-  :version: 900
+  :version: 910
   :args:    - dvoid *hndl
             - OCIError *err
             - sb4 yr
@@ -1090,7 +1090,7 @@ OCIIntervalSetYearMonth:
 
 # round trip: 0 (not docmented. I guess.)
 OCIRowidToChar:
-  :version: 900
+  :version: 910
   :args:    - OCIRowid *rowidDesc
             - OraText *outbfp
             - ub2 *outbflp
