@@ -20,6 +20,16 @@ end
 
 require 'oci8lib'
 
+class OCI8
+  ORAVER_8_0  = 0x08000000 #  8.0
+  ORAVER_8_1  = 0x08100000 #  8.1
+  ORAVER_9_1  = 0x09100000 #  9.1
+  ORAVER_9_2  = 0x09200000 #  9.2
+  ORAVER_10_1 = 0x0a100000 # 10.1
+  ORAVER_10_2 = 0x0a200000 # 10.2
+  ORAVER_11_1 = 0x0b100000 # 11.1
+end
+
 require 'oci8/datetime.rb'
 require 'oci8/oci8.rb'
 require 'oci8/metadata.rb'
